# PartiCLI

./: CMakeLists.txt
include/: constants.h  engine.h  renderer.h
src/: engine.cpp  main.cpp
